--- a/smart-table-module/partials/smartTable.html
+++ b/smart-table-module/partials/smartTable.html
@@ -4,6 +4,10 @@
         <td class="smart-table-global-search" column-span="{{columns.length}}" colspan="{{columnSpan}}">
         </td>
     </tr>
+    <tr class="smart-table-tabs-row" ng-show="areTabsActivated">
+        <td class="smart-table-tabs" column-span="{{columns.length}}" colspan="{{columnSpan}}">
+        </td>
+    </tr>
     <tr class="smart-table-header-row">
         <th ng-repeat="column in columns" ng-include="column.headerTemplateUrl"
             class="smart-table-header-cell {{column.headerClass}}" scope="col">
