--- a/smart-table-module/partials/smartTable.html
+++ b/smart-table-module/partials/smartTable.html
@@ -15,7 +15,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="dataRow in displayedCollection" ng-class="{selected:dataRow.isSelected}"
+    <tr ng-repeat="dataRow in displayedCollection" ng-class="{selected:dataRow.isSelected, danger:dataRow.isDanger}"
         class="smart-table-data-row">
         <td ng-repeat="column in columns" class="smart-table-data-cell {{column.cellClass}}"></td>
     </tr>
